--- a/ListaDesejo/res/values/strings.xml
+++ b/ListaDesejo/res/values/strings.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
 
     <string name="app_name">Lista de Desejo</string>
@@ -24,11 +25,13 @@
     <string name="exibirPreco">Preço</string>
     <string name="recarregar">Recarregar</string>
     <string name="title_activity_main_activity2">Lista de Desejo</string>
-    
+
     <string-array name="itens">
         <item>Eletrônicos</item>
-		<item>Livros</item>
+        <item>Livros</item>
         <item>Material para Escritório</item>
     </string-array>
+
+    <string name="title_activity_lista_selecao">Itens Encontrados</string>
 
 </resources>
