Versão do dia 09.01.2013

--- a/ListaDesejo/res/values/strings.xml
+++ b/ListaDesejo/res/values/strings.xml
@@ -33,5 +33,6 @@
     </string-array>
 
     <string name="title_activity_lista_selecao">Itens Encontrados</string>
+    <string name="title_activity_main_aula2">MainAula2Activity</string>
 
 </resources>
